# nhl-top

./: .gitignore  CLAUDE.md  COMPONENT_EXAMPLE.md  Cargo.toml  PHASE5_BRIDGE.md  REACT_PLAN_PROGRESS.md  README.md  REFACTORING_PLAN.md  REFACTOR_PLAN_COMPONENT_WIDGET_SEPARATION.md  TODO.md  TUI_MIGRATION_DELEGATED.md  TUI_MIGRATION_PROGRESS.md  TUI_WIDGET_MIGRATION_PLAN.md  WIDGET_MIGRATION_PHASE1.md  WIDGET_REFACTOR_PLAN.md  boxscore_OTT_BOS.txt  boxscore_sample_2024020174.txt  cached_refactor_proposal.md  config.toml.example  dynamic_theming_plan.md  future-test-backend.md  standings_scrolling_ultrathink.md
.claude/agents/: api-integrator.md  fixture-builder.md  navigation-debugger.md  test-writer.md  tui-architect.md
.claude/commands/: add-action.md  add-component.md  add-stat.md  add-tab.md  add-test.md  add-widget.md  benchmark.md  (+18 more)
benches/: performance.rs
docs/: REFACTORING_QUICKSTART.md  architecture.md  component-patterns.md  document-system.md  navigation.md
new-doc/: AUTOSCROLLING_PLAN.md  DOCUMENT_SYSTEM_PLAN.md  abstraction-analysis-2025-11-26.md  document-system-refactor-status.md  panel-stack-analysis-2025-11-28.md  panel-to-document-refactoring-plan.md  react-system-refactor-plan.md  state-sync-analysis.md
old-mds/: BROWSER_IMPLEMENTATION_PLAN.md  CURRENT_STATUS.md  GAME_DETAILS_FINAL_SUMMARY.md  GAME_DETAILS_IMPLEMENTATION_STATUS.md  GAME_DETAILS_NAVIGATION_PLAN.md  GAME_DETAILS_USAGE_GUIDE.md  IMPLEMENTATION_PLAN.md  ORPHANED_CODE_ANALYSIS.md  PHASE5_COMPLETE.md  PHASE5_SUMMARY.md  PHASE6_PLAN.md  REACT_PLAN.md  REFACTORING_PLAN.md  REFACTOR_STATUS.md  TUI_MIGRATION_PROGRESS.md  TUI_MIGRATION_STATE.md  TUI_MIGRATION_WAVE1_SPECS.md  ratatui_scrolling_explanation.md  standings_league_navigation_explanation.md  standings_scrolling_implementation_plan.md
src/: background.rs  cache.rs  config.rs  data_provider.rs  fixtures.rs  formatting.rs  layout_constants.rs  lib.rs  main.rs  team_abbrev.rs  types.rs
(+250 files in other folders)
