[package]
name = "nhl"
version = "0.1.0"
edition = "2021"

[lib]
name = "nhl"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.42"
nhl_api = { path = "../nhl-api" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.40", features = ["cargo", "derive"]}
ratatui = "0.29.0"
crossterm = "0.28.1"
xdg = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

