[package]
name = "nhl"
version = "0.2.0"
edition = "2021"

[lib]
name = "nhl"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4.42"
nhl_api = { path = "../nhl-api"  }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.40", features = ["cargo", "derive"]}
ratatui = "0.29.0"
crossterm = "0.28.1"
xdg = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
cached = { version = "0.49", features = ["async"] }
unicode-width = "0.1"

[features]
game_stats = []
